--- a/app/views/creditors/index.html.haml
+++ b/app/views/creditors/index.html.haml
@@ -1,14 +1,14 @@
-- content_for :secondary_navigation do
-  %li= link_to 'New Creditor', new_creditor_path
-
-- title 'Listing Creditors'
-
-%table.table
-  %tr
-    %th Name
-    %th
-  = render @creditors, :pass_through => @pass_through
-.action-bars
-  -# A button will be placed in the near future?
-  &nbsp;
-  = will_paginate @creditors
+= tabs_for(:class => 'secondary-navigation') do |tab|
+  - tab.create(new_creditor_path, 'New Creditor') do
+    .content
+      %h2 Listing Creditors
+      = render :partial => 'layouts/flashes'
+      %table.table
+        %tr
+          %th Name
+          %th
+        = render @creditors, :pass_through => @pass_through
+      .action-bars
+        -# A button will be placed in the near future?
+        &nbsp;
+        = will_paginate @creditors
