Introduced partial layout.

--- a/app/views/bank_accounts/index.html.haml
+++ b/app/views/bank_accounts/index.html.haml
@@ -1,12 +1,3 @@
 = tabs_for(:class => 'secondary-navigation') do |tab|
   - tab.create('table_container', 'Bank Accounts', :item_html => { :class => 'active'}) do
-    .content
-      %h2 Listing Bank Accounts
-      = render :partial => 'layouts/flashes'
-      %table.table
-        %tr
-          %th Account number
-          %th Description
-          %th.balance Balance
-          %th
-        = render @bank_accounts
+    = render :partial => 'index', :locals => { :bank_accounts => @bank_accounts }, :layout => 'shared/block_content'
