--- a/app/views/bank_accounts/edit.html.haml
+++ b/app/views/bank_accounts/edit.html.haml
@@ -1,6 +1,3 @@
 = tabs_for(:class => 'secondary-navigation') do |tab|
   - tab.create(bank_accounts_path, '« Back') do
-    .content
-      %h2 Edit Bank Account
-      = render :partial => 'layouts/flashes'
-      = render 'form', :bank_account => @bank_account
+    = render :partial => 'edit', :locals => { :bank_account => @bank_account }, :layout => 'shared/block_content'
