--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -18,8 +18,9 @@
         -# A button will be placed in the near future?
         &nbsp;
         = will_paginate @expenses
-  = render :partial => 'expenses_tab', :locals => { :tab => tab }
-  = render :partial => 'debits_and_credits_tabs', :locals => { :tab => tab }
+
+  = render :partial => 'expenses_tab', :locals => { :tab => tab, :bank_account => @bank_account }
+  = render :partial => 'debits_and_credits_tabs', :locals => { :tab => tab, :category_chart => @category_chart }
 
 - content_for :sidebar do
   .block
