Replaced jquery parents with closest.

--- a/app/views/expenses/_debits_and_credits_tabs.html.haml
+++ b/app/views/expenses/_debits_and_credits_tabs.html.haml
@@ -24,7 +24,7 @@
     $(function () {
       $('.switch_categories').each(function(index) {
         var self = this;
-        var $containers = $(self).parents('.content').find('.categories_container');
+        var $containers = $(self).closest('.content').find('.categories_container');
         $(self).find('a')
           .text($containers.not(':first')
             .hide()
