--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,7 @@
             %li{:class => controller.controller_name == 'expenses' && 'active' }= link_to "Expenses", expenses_path
             %li{:class => controller.controller_name == 'categories' && 'active' }= link_to "Categories", categories_path(:roots => true)
             %li{:class => controller.controller_name == 'creditors' && 'active' }= link_to "Creditors", creditors_path
+            %li{:class => controller.controller_name == 'presets' && 'active' }= link_to "Presets", presets_path
             %li{:class => controller.controller_name == 'uploads' && 'active' }= link_to "Uploads", uploads_path
 
       %section#content
