--- a/app/views/expenses/_form.html.haml
+++ b/app/views/expenses/_form.html.haml
@@ -9,6 +9,8 @@
       $("#expense_category_id").autocompleteFromGroupedSelect();
     });
 
+
+
 = semantic_form_for([bank_account, expense]) do |f|
   = render "shared/error_messages", :target => expense
 
@@ -18,7 +20,7 @@
   = f.inputs do
     = f.input :transaction_date, :input_html => { :disabled => true }
     = f.input :transaction_amount, :input_html => { :disabled => true }
-    = f.input :description, :input_html => { :disabled => true }
+    = f.input :description, :as => :text, :input_html => { :disabled => true }
 
   = f.inputs do
     = f.input :creditor, :include_blank => true
