--- a/app/views/presets/_preset.html.haml
+++ b/app/views/presets/_preset.html.haml
@@ -1,4 +1,5 @@
 %tr[preset]{ :class => "#{cycle('odd', 'even')}"}
+  %td= check_box_tag "preset_ids[]", preset.id, false, :id => "preset_ids_#{preset.id}"
   %td= preset.keyphrase
   %td
     = preset.creditor.try(:name) || '-'
