Added category form to preset sidebar.

--- a/app/views/presets/edit.html.haml
+++ b/app/views/presets/edit.html.haml
@@ -2,3 +2,9 @@
   - tab.create(presets_path(@pass_through), '« Back')
   - tab.create(new_preset_path, 'New Preset') do
     = render :partial => 'edit', :locals => { :preset => @preset, :pass_through => @pass_through }, :layout => 'shared/block_content'
+    
+- content_for :sidebar do
+  .block
+    %h3 Category
+    .content
+      = render :partial => 'categories/form', :locals => { :category => @category, :pass_through => @pass_through }
