Added preset through sidebar.

--- a/app/views/expenses/edit.html.haml
+++ b/app/views/expenses/edit.html.haml
@@ -7,3 +7,8 @@
     %h3 Category
     .content
       = render :partial => 'categories/form', :locals => { :category => @category, :pass_through => @pass_through }
+
+  .block
+    %h3 Preset
+    .content
+      = render :partial => 'presets/form', :locals => { :preset => @preset, :pass_through => @pass_through }
