--- a/app/views/expenses/_edit.html.haml
+++ b/app/views/expenses/_edit.html.haml
@@ -1,2 +1,2 @@
 - title "Edit Expense"
-= render 'form', :expense => expense, :bank_account => bank_account, :pass_through => pass_through
+= render 'expenses/form', :expense => expense, :bank_account => bank_account, :pass_through => pass_through
