--- a/app/views/presets/_new.html.haml
+++ b/app/views/presets/_new.html.haml
@@ -1,2 +1,2 @@
 - title "Add a new Preset"
-= render 'form', :preset => preset, :pass_through => pass_through
+= render 'presets/form', :preset => preset, :pass_through => pass_through
