--- a/app/views/presets/edit.html.haml
+++ b/app/views/presets/edit.html.haml
@@ -1,8 +1,8 @@
 = tabs_for(:class => 'secondary-navigation') do |tab|
   - tab.create(presets_path(@pass_through), '« Back')
   - tab.create(new_preset_path, 'New Preset') do
-    = render :partial => 'edit', :locals => { :preset => @preset, :pass_through => @pass_through }, :layout => 'shared/block_content'
-    
+    = render :partial => 'presets/edit', :locals => { :preset => @preset, :pass_through => @pass_through }, :layout => 'shared/block_content'
+
 - content_for :sidebar do
   .block
     %h3 Category
