--- a/app/views/shared/_error_messages.html.haml
+++ b/app/views/shared/_error_messages.html.haml
@@ -1,7 +1,7 @@
--if target.errors.any?
+-if target.errors.any? && !must_be_a_sidebar?
   #errorExplanation
     %h3 There was a problem with your submission.
-    %p 
-      Errors have been 
+    %p
+      Errors have been
       %strong highlighted
       below.
