--- a/app/views/bank_accounts/_edit.html.haml
+++ b/app/views/bank_accounts/_edit.html.haml
@@ -1,3 +1,3 @@
 - title 'Edit Bank Account'
 = render :partial => 'layouts/flashes'
-= render 'form', :bank_account => @bank_account
+= render 'form', :bank_account => bank_account
