--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -2,4 +2,4 @@
   - tab.create(new_category_path(@pass_through), 'New Category')
   - tab.create(categories_path(:roots => true), 'Main Categories', :item_html => { :class => params[:roots] && 'active'})
   - tab.create(categories_path, 'Subcategories', :item_html => { :class => !params[:roots] && 'active'}) do
-    = render :partial => 'index', :locals => { :categories => @categories }, :layout => 'shared/block_content'
+    = render :partial => 'index', :locals => { :categories => @categories, :pass_through => @pass_through }, :layout => 'shared/block_content'
