Changed font size in table a bit.

--- a/app/stylesheets/_structure.scss
+++ b/app/stylesheets/_structure.scss
@@ -137,6 +137,7 @@ aside {
 }
 
 .table {
+  @include adjust-font-size-to(14px);
   border: none;
   .debit, .credit, .balance, .total {
     text-align: right;
