--- a/app/views/bank_accounts/_bank_account.html.haml
+++ b/app/views/bank_accounts/_bank_account.html.haml
@@ -1,7 +1,8 @@
 %tr[bank_account]{ :class => "#{cycle('odd', 'even')}"}
-  %td= "#{bank_account}"
+  %td
+    = "#{bank_account}"
+    .row-actions
+      = link_to('Edit', edit_bank_account_path(bank_account))
   %td= bank_account.description
   %td.balance
     = visual_amount(bank_account.balance, BankAccount.max.balance)
-  %td
-    = link_to('Edit', edit_bank_account_path(bank_account))
