--- a/app/stylesheets/_structure.scss
+++ b/app/stylesheets/_structure.scss
@@ -5,6 +5,7 @@ body {
 /* Layout -------------------------------------------------------------- */
 #container {
   header {
+    border-top: 1px solid;
     h1[role='banner'] {
       // span the full context:
       @include full; } }
